# game-share

./: CMakeLists.txt  README.md  deploy.bat
backend/: CMakeLists.txt
backend/data_structures/: CMakeLists.txt
backend/data_structures/include/data_structures/: game.hpp  macros.hpp  user.hpp
backend/data_structures/src/: game.cpp  user.cpp
backend/interface/: CMakeLists.txt
backend/interface/include/interface/: interface.hpp
db/: CMakeLists.txt
db/include/db/: db.h
dbIf/: CMakeLists.txt
dbIf/include/dbIf/: dbIf.h
dbImpl_qt_sql/: CMakeLists.txt
dbImpl_qt_sql/include/dbImpl_qt_sql/: dbImpl_qt_sql.h
dbImpl_qt_sql/src/: dbImpl_qt_sql.cpp
gui/: CMakeLists.txt
gui/main_app/: CMakeLists.txt  main.cpp  qml.qrc
gui/main_app/qml/: GameShare.qml  main.qml
loguru/: CMakeLists.txt
loguru/include/loguru/: loguru.hpp
loguru/src/: loguru.cpp
